service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-demo-service

spec:
  type: NodePort

  selector:
    app: devops-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
